# cmake_demo

./: .gitnone  CMakeLists.txt  README.md  main.cc
function_A/: CMakeLists.txt  function_A.cc  function_A.h
function_B/: function_B.cc  function_B.h
function_C_Top/: CMakeLists.txt  function_C_Top.h
function_C_Top/function_C/: function_C.cc  function_C.h
